--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,25 @@
 {
-    "name": "bitpay/magento-plugin",
-    "description": "Bitcoin payment module using the bitpay.com service",
+    "name": "GloBee-Official/magento-plugin",
+    "description": "Bitcoin payment module using the globee.com service",
     "keywords": ["magento","bitcoin"],
     "minimum-stability": "stable",
     "type": "magento-plugin",
-    "homepage": "https://github.com/bitpay/magento-plugin",
+    "homepage": "https://github.com/GloBee-Official/magento-plugin",
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/GloBee-Official/php-bitpay-client.git"
+        }
+    ],
     "support": {
-        "email": "support@bitpay.com",
-        "issues": "https://github.com/bitpay/magento-plugin/issues",
-        "source": "https://github.com/bitpay/magento-plugin"
+        "email": "support@globee.com",
+        "issues": "https://github.com/GloBee-Official/magento-plugin/issues",
+        "source": "https://github.com/GloBee-Official/magento-plugin"
     },
     "require": {
-        "composer/installers": "~1.0",
-        "bitpay/php-client": "dev-master#9027ce67e4b28516ff1ebd1046bdd15c37a7a59f"
+        "paybee/php-client": "dev-master@dev",
+        "composer/installers": "~1.0"
     },
     "require-dev": {
         "symfony/finder": "~2.3",
